feat: agent cash request to the admin features implemented

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Jaldi:wght@400;700&display=swap');
+
 @import "tailwindcss";
 @import "tailwindcss";
 @plugin "daisyui";
+
+* {
+  font-family: "Jaldi", serif;
+}
 
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
